--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -2,7 +2,8 @@
 name: Feature request
 description: Suggest a new feature or improve an existing one
 title: "[Feature Request]: "
-labels: ["Enhancement / Feature Request", "FR: Awaiting Consideration"]
+labels: ["FR: Awaiting Consideration"]
+type: ["Enhancement"]
 # assignees:
 #   - octocat
 body:
